<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        android:background="@color/white">
    <net.wash8.customview.CustomTitle
            android:id="@+id/custom_title"
            android:layout_width="match_parent"
            android:layout_height="60dp">
    </net.wash8.customview.CustomTitle>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
            android:id="@+id/ll_black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_car_item_height"
            android:gravity="center_vertical"
            android:clickable="true">
        <View
            android:layout_width="@dimen/choose_car_circle_size"
            android:layout_height="@dimen/choose_car_circle_size"
            android:layout_marginLeft="40dp"
            android:background="@drawable/black_circle"/>
        <TextView
                android:id="@+id/tv_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/black"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/dividing_line"/>
    <LinearLayout
            android:id="@+id/ll_white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_car_item_height"
            android:gravity="center_vertical"
            android:clickable="true">
        <View
                android:layout_width="@dimen/choose_car_circle_size"
                android:layout_height="@dimen/choose_car_circle_size"
                android:layout_marginLeft="40dp"
                android:background="@drawable/white_circle"/>
        <TextView
                android:id="@+id/tv_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/white"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/dividing_line"/>
    <LinearLayout
            android:id="@+id/ll_red"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_car_item_height"
            android:gravity="center_vertical"
            android:clickable="true">
        <View
                android:layout_width="@dimen/choose_car_circle_size"
                android:layout_height="@dimen/choose_car_circle_size"
                android:layout_marginLeft="40dp"
                android:background="@drawable/red_circle"/>
        <TextView
                android:id="@+id/tv_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/red"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/dividing_line"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_car_item_height"
            android:gravity="center_vertical"
            android:id="@+id/ll_blue"
            android:clickable="true">
        <View
                android:layout_width="@dimen/choose_car_circle_size"
                android:layout_height="@dimen/choose_car_circle_size"
                android:layout_marginLeft="40dp"
                android:background="@drawable/blue_circle"/>
        <TextView
                android:id="@+id/tv_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/blue"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/dividing_line"/>
    <LinearLayout
            android:id="@+id/ll_silvergray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_car_item_height"
            android:gravity="center_vertical"
            android:clickable="true">

        <View
                android:layout_width="@dimen/choose_car_circle_size"
                android:layout_height="@dimen/choose_car_circle_size"
                android:layout_marginLeft="40dp"
                android:background="@drawable/sliver_gray_circle"/>
        <TextView
                android:id="@+id/tv_silver_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/sliver_gray"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/dividing_line"/>
    <LinearLayout
            android:id="@+id/ll_darkgray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_car_item_height"
            android:gravity="center_vertical"
            android:clickable="true">
        <View
                android:layout_width="@dimen/choose_car_circle_size"
                android:layout_height="@dimen/choose_car_circle_size"
                android:layout_marginLeft="40dp"
                android:background="@drawable/dark_gray_circle"/>
        <TextView
                android:id="@+id/tv_oxford_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/dark_gray"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/dividing_line"/>
    <LinearLayout
            android:id="@+id/ll_yellow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_car_item_height"
            android:gravity="center_vertical"
            android:clickable="true">
        <View
                android:layout_width="@dimen/choose_car_circle_size"
                android:layout_height="@dimen/choose_car_circle_size"
                android:layout_marginLeft="40dp"
                android:background="@drawable/yellow_circle"/>
        <TextView
                android:id="@+id/tv_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/yellow"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/dividing_line"/>
    <LinearLayout
            android:id="@+id/ll_green"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_car_item_height"
            android:gravity="center_vertical"
            android:clickable="true">
        <View
                android:layout_width="@dimen/choose_car_circle_size"
                android:layout_height="@dimen/choose_car_circle_size"
                android:layout_marginLeft="40dp"
                android:background="@drawable/green_circle"/>
        <TextView
                android:id="@+id/tv_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/green"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/dividing_line"/>
    <LinearLayout
            android:id="@+id/ll_champagne"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_car_item_height"
            android:gravity="center_vertical"
            android:clickable="true">
        <View
                android:layout_width="@dimen/choose_car_circle_size"
                android:layout_height="@dimen/choose_car_circle_size"
                android:layout_marginLeft="40dp"
                android:background="@drawable/champagne_circle"/>
        <TextView
                android:id="@+id/tv_champagne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/champagne"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/dividing_line"/>
    <LinearLayout
            android:id="@+id/ll_coffee"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_car_item_height"
            android:gravity="center_vertical"
            android:clickable="true">
        <View
                android:layout_width="@dimen/choose_car_circle_size"
                android:layout_height="@dimen/choose_car_circle_size"
                android:layout_marginLeft="40dp"
                android:background="@drawable/coffee_circle"/>
        <TextView
                android:id="@+id/tv_coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/coffee"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/dividing_line"/>
    <LinearLayout
            android:id="@+id/ll_purple"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_car_item_height"
            android:gravity="center_vertical"
            android:clickable="true">
        <View
                android:layout_width="@dimen/choose_car_circle_size"
                android:layout_height="@dimen/choose_car_circle_size"
                android:layout_marginLeft="40dp"
                android:background="@drawable/purple_circle"/>
        <TextView
                android:id="@+id/tv_purple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/purple"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/dividing_line"/>
    <LinearLayout
            android:id="@+id/ll_orange"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_car_item_height"
            android:gravity="center_vertical"
            android:clickable="true">
        <View
                android:layout_width="@dimen/choose_car_circle_size"
                android:layout_height="@dimen/choose_car_circle_size"
                android:layout_marginLeft="40dp"
                android:background="@drawable/orange_circle"/>
        <TextView
                android:id="@+id/tv_orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/orange"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/dividing_line"/>
</LinearLayout>
</ScrollView>
</LinearLayout>